<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
    android:id="@+id/view"
    android:padding="16dp"
    android:background="@color/backgroundColor"
    tools:context="MainActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/roboto"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="60sp" />
    <LinearLayout
        android:gravity="center"
        android:background="@color/backgroundColor"
        tools:context=".MainActivity"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        >

        <Button
            android:id="@+id/btnSinglePlayer"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/roboto"
            android:padding="10dp"
            android:text="@string/btnPlay"
            android:textColor="@color/white"
            android:textSize="25sp"></Button>

        <Button
            android:id="@+id/btnMultiPlayer"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@color/colorPrimary"
            android:padding="10dp"
            android:text="@string/btnMultiplayer"
            android:textColor="@color/white"
            android:textSize="25sp"></Button>

        <Button
            android:id="@+id/btnConnect"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@color/colorPrimary"
            android:padding="10dp"
            android:text="@string/btnConnect"
            android:textColor="@color/white"
            android:textSize="25sp"></Button>
    </LinearLayout>

</LinearLayout>