<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="MainActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/roboto"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="60sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/btnJogar"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@color/colorSinglePlayer"
            android:fontFamily="@font/roboto"
            android:padding="10dp"
            android:text="@string/btnJogar"
            android:textColor="@color/colorWhite"
            android:textSize="25sp"></Button>

        <Button
            android:id="@+id/btnProfile"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@color/colorMultiPlayer"
            android:padding="10dp"
            android:text="@string/btnProfile"
            android:textColor="@color/colorWhite"
            android:textSize="25sp"></Button>

        <Button
            android:id="@+id/btnHistorico"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@color/colorNetwork"
            android:padding="10dp"
            android:text="@string/btnHistórico"
            android:textColor="@color/colorWhite"
            android:textSize="25sp"></Button>
    </LinearLayout>

</LinearLayout>