<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context="MainActivity">

    <TextView
        android:id="@+id/tvPlay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/roboto"
        android:text="@string/btnJogar"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorWhite"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/scrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:fillViewport="true"
        android:scrollbarStyle="outsideInset"
        app:layout_constraintBottom_toTopOf="@+id/btnBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPlay">

        <LinearLayout
            android:id="@+id/buttonsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBackground"
            android:gravity="center"
            android:orientation="vertical"
            tools:context=".MainActivity">

            <Button
                android:id="@+id/btnSinglePlayer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:background="@color/colorBlue"
                android:fontFamily="@font/roboto"
                android:padding="20sp"
                android:text="@string/btnPlay"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:textStyle="bold"></Button>

            <Button
                android:id="@+id/btnMultiPlayer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:background="@color/colorOrange"
                android:padding="20sp"
                android:text="@string/btnMultiplayer"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:textStyle="bold"></Button>

            <Button
                android:id="@+id/btnConnect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorRed"
                android:padding="20sp"
                android:text="@string/btnConnect"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:textStyle="bold"></Button>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnBack"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorBlue"
        android:fontFamily="@font/roboto"
        android:padding="20sp"
        android:text="Voltar"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView" />

</androidx.constraintlayout.widget.ConstraintLayout>